# edgar-parser

./: CLAUDE.md  README.md  pyproject.toml
edgar_parser/: __init__.py  config.py  earnings_8k.py  enrich.py  http_client.py  matching.py  pipeline.py  section_parser.py  tools.py  utils.py
